--- a/eda/index.Rmd
+++ b/eda/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "index"
+title: "Exploratory Analysis"
 output: html_document
 ---
 
@@ -7,21 +7,19 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r, echo=FALSE, include=FALSE}
+source("map.R")
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r map, echo=FALSE}
+mapParams <- mapCountryData( water_data_map_joined
+                             , nameColumnToPlot="Proportion Using Unimproved Sources of Drinking Water"
+                             , addLegend=FALSE
+                             , catMethod = catMethod
+                             , colourPalette = colourPalette )
+do.call( addMapLegend , c( mapParams
+                           , legendLabels="all"
+                           , legendWidth=0.5
+                           , legendIntervals="data" , legendMar = 2 ) )
 ```
 
