added descr for map

--- a/eda/index.Rmd
+++ b/eda/index.Rmd
@@ -16,7 +16,7 @@ source("causes.R")
 ## Statistical Analysis
 The data that we’re most interested in is data about the percentage of a regions population that is using unimproved drinking water. 
 
-```{r map, echo=FALSE}
+```{r , echo=FALSE, include=FALSE}
 summary(poor_water$unimproved_dwater)
 ```
 
@@ -25,6 +25,9 @@ Analyzing the data collected from UNICEF we can see that the mean proportion of 
 At further inspection we can see that the standard deviation of the proportion of populations using unimproved drinking water is 7.513%. This supports our analysis that there exist countries which use unimproved water at significantly higher rates than the other regions in the world. 
 
 ## Geographic Distribution 
+
+Unimproved drinking water sources include unprotected dug wells, unprotected springs, cart with small tank/drum, bottled water, tanker truck, and surface water (river, dam, lake, pond, stream, canal, irrigation channels). The data gives us significant insights on which parts of the world might be potentially affected in terms of health. We notice that the African continent has significantly higher proportions of populations using unimproved sources of drinking water. Causes of health burden across the world measured against the data on proportions of population using unimproved water sources can bring to light the countries that are most affected by this particular indicator and would thus help in better development of strategies for devicing solutions (starting from improving water sources).
+
 ```{r map, echo=FALSE, message=FALSE}
 mapParams <- mapCountryData( water_data_map_joined
                             , nameColumnToPlot="Proportion Using Unimproved Sources of Drinking Water"
@@ -34,7 +37,7 @@ mapParams <- mapCountryData( water_data_map_joined
 do.call( addMapLegend , c( mapParams
                           , legendLabels="all"
                           , legendWidth=0.5
-                          , legendIntervals="data" , legendMar = 2 ) )
+                          , legendIntervals="data" , legendMar = 2 ))
 ```
 
 ## Common Causes of Health Burden 
